原生zip包替换 / ResManagerEditor拆分

--- a/Editor/ResBuilder/ResManagerEditor.ResBuilder.asmdef
+++ b/Editor/ResBuilder/ResManagerEditor.ResBuilder.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "ResManagerEditor",
+    "name": "ResManagerEditor.ResBuilder",
     "references": [
         "ResManager",
-        "Unity.IO.Compression",
-        "ResManagerEditorEntry",
-        "ResManagerEntry",
-		"System.IO.Compression"
+        "ResManagerEditor"
     ],
     "includePlatforms": [
         "Editor"
