解决空工程导入问题

--- a/Editor/ResBuilder/ResManagerEditor.ResBuilder.asmdef
+++ b/Editor/ResBuilder/ResManagerEditor.ResBuilder.asmdef
@@ -12,6 +12,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": []
+    "defineConstraints": [
+        "MOD_CAPSRESMANAGER"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
